--- a/token_man.lpi
+++ b/token_man.lpi
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="11"/>
+    <Version Value="12"/>
     <General>
+      <Flags>
+        <CompatibilityMode Value="True"/>
+      </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <MainUnit Value="0"/>
       <Title Value="token_man"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
@@ -29,7 +31,6 @@
     </PublishOptions>
     <RunParams>
       <FormatVersion Value="2"/>
-      <Modes Count="0"/>
     </RunParams>
     <RequiredPackages Count="1">
       <Item1>
@@ -56,7 +57,7 @@
       <Filename Value="token_man"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir);../../bc_rtl/include"/>
+      <IncludeFiles Value="$(ProjOutDir);../../bc_rtl/inc"/>
       <OtherUnitFiles Value="../../bc_rtl"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
